--- a/form-task.html
+++ b/form-task.html
@@ -53,63 +53,63 @@
         <fieldset>
             <legend>Pasirinkite grupę</legend>
             <div class="form-control">
-                <input type="radio" name="group" id="feu1" value="feu1">
+                <input type="radio" name="group" id="feu1" value="FEU1">
                 <label for="feu1">FEU1</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu2" value="feu2">
+                <input type="radio" name="group" id="feu2" value="FEU2">
                 <label for="feu2">FEU2</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu3" value="feu3">
+                <input type="radio" name="group" id="feu3" value="FEU3">
                 <label for="feu3">FEU3</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu4" value="feu4">
+                <input type="radio" name="group" id="feu4" value="FEU4">
                 <label for="feu4">FEU4</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu5" value="feu5">
+                <input type="radio" name="group" id="feu5" value="FEU5">
                 <label for="feu5">FEU5</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu6" value="feu6">
+                <input type="radio" name="group" id="feu6" value="FEU6">
                 <label for="feu6">FEU6</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu7" value="feu7">
+                <input type="radio" name="group" id="feu7" value="FEU7">
                 <label for="feu7">FEU7</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu8" value="feu8">
+                <input type="radio" name="group" id="feu8" value="FEU8">
                 <label for="feu8">FEU8</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu9" value="feu9">
+                <input type="radio" name="group" id="feu9" value="FEU9">
                 <label for="feu9">FEU9</label>
             </div>
             <div class="form-control">
-                <input type="radio" name="group" id="feu10" value="feu10">
+                <input type="radio" name="group" id="feu10" value="FEU10">
                 <label for="feu10">FEU10</label>
             </div>
         </fieldset>
         <fieldset>
             <legend>Pasirinkite dominančias programavimo kalbas</legend>
             <div class="form-control">
-                <input type="checkbox" name="language" id="python-language" value="python">
+                <input type="checkbox" name="language" id="python-language" value="Python">
                 <label for="python-language">Python</label>
             </div>
             <div class="form-control">
-                <input type="checkbox" name="language" id="javascript-language" value="javascript">
-                <label for="javascript-language">Javascript</label>
+                <input type="checkbox" name="language" id="javascript-language" value="JavaScript">
+                <label for="javascript-language">JavaScript</label>
             </div>
             <div class="form-control">
-                <input type="checkbox" name="language" id="php-language" value="php">
+                <input type="checkbox" name="language" id="php-language" value="PHP">
                 <label for="php-language">PHP</label>
             </div>
             <div class="form-control">
-                <input type="checkbox" name="language" id="java-language" value="java">
-                <label for="java-language">JAVA</label>
+                <input type="checkbox" name="language" id="java-language" value="Java">
+                <label for="java-language">Java</label>
             </div>
         </fieldset>
         <input value="Pateikti" type="submit" id="submit-button" class="submit-btn">
